--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/joy": "^5.0.0-alpha.49",
     "@reduxjs/toolkit": "^1.8.6",
     "@types/uuid": "^8.3.4",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
@@ -21,6 +22,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
