--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/joy": "^5.0.0-alpha.49",
-    "@reduxjs/toolkit": "^1.8.6",
     "@types/uuid": "^8.3.4",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
-    "react-redux": "^8.0.4",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
